--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <!-- Begin MailChimp Signup Form -->
             <div id="mc_embed_signup">
-            <form action="https://reallyeasycart.us2.list-manage.com/subscribe/post?u=56c058814106f136ddb75fcb8&amp;id=c839725f83" method="post" target="_blank">
+            <form action="https://movingtohttps.us2.list-manage.com/subscribe/post?u=56c058814106f136ddb75fcb8&amp;id=c839725f83" method="post" target="_blank">
                 <div id="mc_embed_signup_scroll">
                 <h2>Subscribe to our mailing list</h2>
                 <div class="mc-field-group">
