--- a/index.html
+++ b/index.html
@@ -47,10 +47,12 @@
 
         <footer>
             <p>
+                Follow:
                 <a href="https://twitter.com/MovingtoHTTPS" class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
                 </a>
+                Contribute:
                 <a href="https://github.com/MovingtoHTTPS" class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -59,6 +61,19 @@
         </footer>
 
     </div>
+
+    <!-- Google Analytics -->
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-90554746-1', 'auto');
+    ga('send', 'pageview');
+    </script>
+
+    <!-- AddThis sharing icons -->
+    <script src="https://s7.addthis.com/js/300/addthis_widget.js#pubid=ra-587ff52da81ee382"></script> 
 
 </body>
 </html>
