Added simple viewport for better mobile support

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moving to HTTPS - migrate from HTTP to HTTPS with ease.</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,400i,700,700i" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/normalize.css@5.0.0/normalize.css">
