New redesign in place, just need to add in the content and variations based on filters

--- a/index.html
+++ b/index.html
@@ -3,65 +3,145 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Moving to HTTPS - migrate from HTTP to HTTPS with ease.</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,400i,700,700i" rel="stylesheet">
+    <meta name="description" value="Help guides on moving sites from HTTP to HTTPS">
+
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700|Noto+Serif:400,400i,700,700i" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/normalize.css@5.0.0/normalize.css">
     <link rel="stylesheet" href="https://unpkg.com/font-awesome@4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/app.css">
+
 </head>
 <body>
 
     <div class="container">
 
-        <div class="main">
+        <nav class="nav">
+            <a title="Check out our blog for latest HTTPS news" href="https://blog.movingtohttps.com/" class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-rss fa-stack-1x fa-inverse"></i>
+            </a>
+            <a title="Follow us on Twitter" href="https://twitter.com/MovingtoHTTPS" class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+            </a>
+            <a title="Contribute to this guide on GitHub" href="https://github.com/MovingtoHTTPS" class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+            </a>
+        </nav>
 
-            <header>
-                <h1>Moving to HTTPS</h1>
-                <p>Are you migrating your site from HTTP to HTTPS?
-                    <a href="https://twitter.com/hashtag/movingtohttps">#movingtohttps</a></p>
-                <p>We're working on the website right now but be sure to check back soon!</p>
-            </header>
+        <header class="header">
+            <h1>Moving to HTTPS</h1>
+        </header>
 
-            <hr>
+        <div class="middle">
 
-            <!-- Begin MailChimp Signup Form -->
-            <div id="mc_embed_signup">
-            <form action="https://movingtohttps.us2.list-manage.com/subscribe/post?u=56c058814106f136ddb75fcb8&amp;id=c839725f83" method="post" target="_blank">
-                <div id="mc_embed_signup_scroll">
-                <h2>Subscribe to our mailing list</h2>
-                <div class="mc-field-group">
-                    <label for="mce-EMAIL">Email Address: </label>
-                    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-                    <button name="subscribe" id="mc-embedded-subscribe" class="button">Subscribe</button>
+            <div class="sidebar">
+
+                <div class="owl block-spacing">
+                    <img src="http://archive.catawbaschools.net/schools/BallsCreek/Images1/Owls/Yellow%20Owl.png" alt="Owl logo">
                 </div>
-                <div id="mce-responses" class="clear">
-                    <div class="response" id="mce-error-response" style="display:none"></div>
-                    <div class="response" id="mce-success-response" style="display:none"></div>
-                </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_56c058814106f136ddb75fcb8_c839725f83" tabindex="-1" value=""></div>
+
+                <div class="about-site block">
+                    <p>This is a community site to help you migrate to HTTPS with a tried and tested plan for multiple platforms, hosting envirments and control / access levels</p>
+                    <p>Are you migrating your site from HTTP to HTTPS?
+                        <a href="https://twitter.com/hashtag/movingtohttps">#movingtohttps</a></p>
+                    <p>Looking to contribute? All code is available on <a href="https://github.com/MovingtoHTTPS">GithHub</a>!</p>
                 </div>
-            </form>
+
+                <!-- Begin MailChimp Signup Form -->
+                <div id="mc_embed_signup" class="newsletter block">
+                    <form action="https://movingtohttps.us2.list-manage.com/subscribe/post?u=56c058814106f136ddb75fcb8&amp;id=c839725f83" method="post" target="_blank">
+                        <div id="mc_embed_signup_scroll">
+                        <p>Join the community for updates:</p>
+                        <p class="mc-field-group">
+                            <input type="email" placeholder="Email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                            <button name="subscribe" id="mc-embedded-subscribe" class="button">Subscribe</button>
+                        </p>
+                        <div id="mce-responses" class="clear">
+                            <div class="response" id="mce-error-response" style="display:none"></div>
+                            <div class="response" id="mce-success-response" style="display:none"></div>
+                        </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_56c058814106f136ddb75fcb8_c839725f83" tabindex="-1" value=""></div>
+                        </div>
+                    </form>
+                </div>
+                <!--End mc_embed_signup-->
+
             </div>
-            <!--End mc_embed_signup-->
+
+            <div id="app" class="main block">
+
+                <form id="config">
+                    <div class="filters">
+                        <div class="filter-block">
+                            <label for="platform">Platform</label>
+                            <br>
+                            <select name="platform" id="platform" v-model="platform">
+                                <option>Wordpress</option>
+                                <option>Joomla</option>
+                                <option>Drupal</option>
+                                <option>Wix</option>
+                                <option>Magento</option>
+                                <option>Shopify</option>
+                                <option value="">Other</option>
+                            </select>
+                        </div>
+                        <div class="filter-block">
+                            <label for="hosting">Hosting</label>
+                            <br>
+                            <select name="hosting" id="hosting" v-model="hosting">
+                                <option>GoDaddy</option>
+                                <option>Heart Internet</option>
+                                <option>Dedicated Servers</option>
+                                <option>Cloudflare</option>
+                                <option value="">Other hosting</option>
+                            </select>
+                        </div>
+                        <div class="filter-block">
+                            <label for="control">Control</label>
+                            <br>
+                            <select name="control" id="control" v-model="control">
+                                <option value="max">I have full code access &amp; can install plugins etc if needed</option>
+                                <option value="med">I have access to page content only</option>
+                                <option value="min">I have minimal access</option>
+                            </select>
+                        </div>
+                    </div>
+                </form>
+
+                <hr>
+
+                <p>Using {{ platform }}</p>
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos doloremque quam dolore officiis, illo error itaque tenetur ea! Libero sit, tempora eveniet voluptates enim optio ducimus dolor voluptatum minus hic!</p>
+                <p>Doloremque inventore animi voluptatibus debitis porro suscipit sapiente mollitia fugiat corporis, enim atque minima aperiam consequatur, voluptas quia saepe quidem ex officia harum asperiores eaque ab. Aspernatur maiores sed nobis!</p>
+                <p>Quas repellat repellendus qui, vel eum voluptatum dolorem quam quidem sequi debitis. Praesentium, consequuntur reprehenderit asperiores magnam nihil ex laboriosam id voluptate soluta! Labore fuga fugit ex, vitae architecto laudantium!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos doloremque quam dolore officiis, illo error itaque tenetur ea! Libero sit, tempora eveniet voluptates enim optio ducimus dolor voluptatum minus hic!</p>
+                <p>Doloremque inventore animi voluptatibus debitis porro suscipit sapiente mollitia fugiat corporis, enim atque minima aperiam consequatur, voluptas quia saepe quidem ex officia harum asperiores eaque ab. Aspernatur maiores sed nobis!</p>
+                <p>Quas repellat repellendus qui, vel eum voluptatum dolorem quam quidem sequi debitis. Praesentium, consequuntur reprehenderit asperiores magnam nihil ex laboriosam id voluptate soluta! Labore fuga fugit ex, vitae architecto laudantium!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos doloremque quam dolore officiis, illo error itaque tenetur ea! Libero sit, tempora eveniet voluptates enim optio ducimus dolor voluptatum minus hic!</p>
+                <p>Doloremque inventore animi voluptatibus debitis porro suscipit sapiente mollitia fugiat corporis, enim atque minima aperiam consequatur, voluptas quia saepe quidem ex officia harum asperiores eaque ab. Aspernatur maiores sed nobis!</p>
+                <p>Quas repellat repellendus qui, vel eum voluptatum dolorem quam quidem sequi debitis. Praesentium, consequuntur reprehenderit asperiores magnam nihil ex laboriosam id voluptate soluta! Labore fuga fugit ex, vitae architecto laudantium!</p>
+
+            </div>
 
         </div>
 
-        <footer>
+        <footer class="footer">
+            <div class="addthis_inline_share_toolbox"></div>
             <p>
-                Follow:
-                <a href="https://twitter.com/MovingtoHTTPS" class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                </a>
-                Contribute:
-                <a href="https://github.com/MovingtoHTTPS" class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                </a>
+                <small>Looking for a printed or PDF version of this page? This page is print friendly and you can normally print to PDF :)</small>
             </p>
         </footer>
 
     </div>
+
+    <!-- js imports -->
+    <script src="https://unpkg.com/vue/dist/vue.min.js"></script>
+    <script src="/js/app.js"></script>
 
     <!-- Google Analytics -->
     <script>
@@ -74,7 +154,7 @@
     </script>
 
     <!-- AddThis sharing icons -->
-    <script src="https://s7.addthis.com/js/300/addthis_widget.js#pubid=ra-587ff52da81ee382"></script> 
+    <script src="https://s7.addthis.com/js/300/addthis_widget.js#pubid=ra-587ff52da81ee382"></script>
 
 </body>
 </html>
