--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Moving to HTTPS - migrate from HTTP to HTTPS with ease.</title>
-    <meta name="description" value="Help guides on moving sites from HTTP to HTTPS">
+    <meta name="keywords" content="HTTPS migration, HTTP to HTTPS, moving from HTTP to HTTPS">
+    <meta name="description" content="Help guides on moving sites from HTTP to HTTPS">
 
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700|Noto+Serif:400,400i,700,700i" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/normalize.css@5.0.0/normalize.css">
@@ -45,7 +46,7 @@
                 </div>
 
                 <div class="about-site block">
-                    <p>This is a community site to help you migrate to HTTPS with a tried and tested plan for multiple platforms, hosting envirments and control / access levels</p>
+                    <p>A community site to help you migrate to HTTPS with a tried and tested plan for multiple platforms, hosting envirments and control / access levels</p>
                     <p>Are you migrating your site from HTTP to HTTPS?
                         <a href="https://twitter.com/hashtag/movingtohttps">#movingtohttps</a></p>
                     <p>Looking to contribute? All code is available on <a href="https://github.com/MovingtoHTTPS">GithHub</a>!</p>
@@ -84,7 +85,7 @@
                             </select>
                         </div>
                         <div class="filter-block">
-                            <label for="hosting">Hosting</label>
+                            <label for="hosting">Hosting / CDN</label>
                             <br>
                             <select tabindex="1" name="hosting" id="hosting" v-model="hosting">
                                 <option v-for="(text, value) in options.hosting" v-bind:value="value" v-text="text"></option>
@@ -102,17 +103,71 @@
 
                 <hr>
 
-                <p>Using {{ platform }}</p>
+                <div v-show="platform == 'wordpress'">This shows when Wordpress is selected!</div>
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos doloremque quam dolore officiis, illo error itaque tenetur ea! Libero sit, tempora eveniet voluptates enim optio ducimus dolor voluptatum minus hic!</p>
-                <p>Doloremque inventore animi voluptatibus debitis porro suscipit sapiente mollitia fugiat corporis, enim atque minima aperiam consequatur, voluptas quia saepe quidem ex officia harum asperiores eaque ab. Aspernatur maiores sed nobis!</p>
-                <p>Quas repellat repellendus qui, vel eum voluptatum dolorem quam quidem sequi debitis. Praesentium, consequuntur reprehenderit asperiores magnam nihil ex laboriosam id voluptate soluta! Labore fuga fugit ex, vitae architecto laudantium!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos doloremque quam dolore officiis, illo error itaque tenetur ea! Libero sit, tempora eveniet voluptates enim optio ducimus dolor voluptatum minus hic!</p>
-                <p>Doloremque inventore animi voluptatibus debitis porro suscipit sapiente mollitia fugiat corporis, enim atque minima aperiam consequatur, voluptas quia saepe quidem ex officia harum asperiores eaque ab. Aspernatur maiores sed nobis!</p>
-                <p>Quas repellat repellendus qui, vel eum voluptatum dolorem quam quidem sequi debitis. Praesentium, consequuntur reprehenderit asperiores magnam nihil ex laboriosam id voluptate soluta! Labore fuga fugit ex, vitae architecto laudantium!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos doloremque quam dolore officiis, illo error itaque tenetur ea! Libero sit, tempora eveniet voluptates enim optio ducimus dolor voluptatum minus hic!</p>
-                <p>Doloremque inventore animi voluptatibus debitis porro suscipit sapiente mollitia fugiat corporis, enim atque minima aperiam consequatur, voluptas quia saepe quidem ex officia harum asperiores eaque ab. Aspernatur maiores sed nobis!</p>
-                <p>Quas repellat repellendus qui, vel eum voluptatum dolorem quam quidem sequi debitis. Praesentium, consequuntur reprehenderit asperiores magnam nihil ex laboriosam id voluptate soluta! Labore fuga fugit ex, vitae architecto laudantium!</p>
+                <!-- Migration process -->
+                <main>
+                    <h2>Pre move</h2>
+                    <ol>
+                        <li>
+                            <h3>Select an SSL certificate</h3>
+                            <p>There are 3 types of SSL/TLS certificates you can setup on your site:</p>
+                            <ul>
+                                <li>DV - Domain Validation <em>(Free or purchase available)</em></li>
+                                <li>OV - Oranization Validation <em>(Requires purchase)</em></li>
+                                <li>EV - Extended Validation <em>(Requires purchase)</em></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <h3>Dedicate some time to your migration</h3>
+                            <p>Though installing a certificate can be pretty quick, the actual full migration process can take a good chunk of time to complete</p>
+                        </li>
+                        <li>
+                            <h3>Consider making some changes pre migration</h3>
+                            <p>Some changes such as fixing mixed content can often be done pre migration.
+                                <br>We've listed it later on as part of the migration flow, but feel free to skip ahead to this step in order to ease the migration later on.
+                            </p>
+                        </li>
+
+                    </ol>
+                    <h2>The move</h2>
+                    <ol>
+                        <li>
+                            <h3></h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum nobis sequi atque, sunt laudantium eos quibusdam, vitae aliquid perferendis libero enim iusto labore voluptates! Maxime maiores eius consequatur similique deleniti.</p>
+                        </li>
+                        <li>
+                            <h3></h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A et nam dolorem expedita accusantium, temporibus magni dolores at vitae perspiciatis alias minima repudiandae porro illo maxime. Nam reprehenderit earum placeat!</p>
+                        </li>
+                    </ol>
+
+                    <h2>Post move</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati mollitia, distinctio vitae dolorum provident molestias tempora. Qui mollitia ex, dolor a nihil. Pariatur sed nemo, ullam aut odit repellendus fugiat.</p>
+                    <ol>
+                        <li>
+                            <h3></h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum nobis sequi atque, sunt laudantium eos quibusdam, vitae aliquid perferendis libero enim iusto labore voluptates! Maxime maiores eius consequatur similique deleniti.</p>
+                        </li>
+                        <li>
+                            <h3></h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A et nam dolorem expedita accusantium, temporibus magni dolores at vitae perspiciatis alias minima repudiandae porro illo maxime. Nam reprehenderit earum placeat!</p>
+                        </li>
+                    </ol>
+
+                    <h2>Going above and beyond</h2>
+                    <ol>
+                        <li>
+                            <h3></h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum nobis sequi atque, sunt laudantium eos quibusdam, vitae aliquid perferendis libero enim iusto labore voluptates! Maxime maiores eius consequatur similique deleniti.</p>
+                        </li>
+                        <li>
+                            <h3></h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A et nam dolorem expedita accusantium, temporibus magni dolores at vitae perspiciatis alias minima repudiandae porro illo maxime. Nam reprehenderit earum placeat!</p>
+                        </li>
+                    </ol>
+
+                </main>
 
             </div>
 
