--- a/index.html
+++ b/index.html
@@ -103,13 +103,34 @@
 
                 <hr>
 
-                <div v-show="platform == 'wordpress'">This shows when Wordpress is selected!</div>
+                <!--<div v-show="platform == 'wordpress'">This shows when Wordpress is selected!</div>-->
 
                 <!-- Migration process -->
                 <main>
 
+                    <a class="toggle-section print-hidden" @click="showArea.outline = !showArea.outline">[Toggle]</a>
+                    <h2 v-bind:class="showArea.outline ? '' : 'toggle-hidden-section print-hidden'">Outline</h2>
+                    <ol class="process-outline" v-show="showArea.outline">
+                        <li>
+                            <h3><a href="#pre-move">Pre move</a></h3>
+                            <p>Before actually moving you'll want to select an SSL certificate ready &amp; plan ready for the move</p>
+                        </li>
+                        <li>
+                            <h3><a href="#during-move">The move</a></h3>
+                            <p>Moving day, time to get/buy, install and check the SSL certificate, fix mixed content issues, setup redirects and check 3rd party integrations.</p>
+                        </li>
+                        <li>
+                            <h3><a href="#post-move">Post move</a></h3>
+                            <p>Shortly after the initial move, check for new issues and once ready, setup the site to always use HTTPS</p>
+                        </li>
+                        <li>
+                            <h3><a href="#above-and-beyond">Going above and beyond</a></h3>
+                            <p>For the A+ students, fixing further issues &amp; similar security improments</p>
+                        </li>
+                    </ol>
+
                     <a class="toggle-section print-hidden" @click="showArea.preMove = !showArea.preMove">[Toggle]</a>
-                    <h2 v-bind:class="showArea.preMove ? '' : 'toggle-hidden-section print-hidden'">Pre move</h2>
+                    <h2 id="pre-move" v-bind:class="showArea.preMove ? '' : 'toggle-hidden-section print-hidden'">Pre move</h2>
                     <ol v-show="showArea.preMove">
                         <li>
                             <h3>Select an SSL certificate</h3>
@@ -133,7 +154,7 @@
                     </ol>
 
                     <a class="toggle-section print-hidden" @click="showArea.duringMove = !showArea.duringMove">[Toggle]</a>
-                    <h2 v-bind:class="showArea.duringMove ? '' : 'toggle-hidden-section print-hidden'">Moving day</h2>
+                    <h2 id="during-move" v-bind:class="showArea.duringMove ? '' : 'toggle-hidden-section print-hidden'">Moving day</h2>
                     <ol v-show="showArea.duringMove">
                         <li>
                             <h3>Install the certificate</h3>
@@ -158,7 +179,7 @@
                     </ol>
 
                     <a class="toggle-section print-hidden" @click="showArea.postMove = !showArea.postMove">[Toggle]</a>
-                    <h2 v-bind:class="showArea.postMove ? '' : 'toggle-hidden-section print-hidden'">Post move</h2>
+                    <h2 id="post-move" v-bind:class="showArea.postMove ? '' : 'toggle-hidden-section print-hidden'">Post move</h2>
                     <ol v-show="showArea.postMove">
                         <li>
                             <h3>Wait a week or so...</h3>
@@ -171,7 +192,7 @@
                     </ol>
 
                     <a class="toggle-section print-hidden" @click="showArea.aboveAndBeyond = !showArea.aboveAndBeyond">[Toggle]</a>
-                    <h2 v-bind:class="showArea.aboveAndBeyond ? '' : 'toggle-hidden-section print-hidden'">Going above and beyond</h2>
+                    <h2 id="above-and-beyond" v-bind:class="showArea.aboveAndBeyond ? '' : 'toggle-hidden-section print-hidden'">Going above and beyond</h2>
                     <ol v-show="showArea.aboveAndBeyond">
                         <li>
                             <h3>Update internal links in pages, emails etc.</h3>
