Added our SSowL ;). Ok he may not be a winning sketch but he'll do just fine

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <meta name="keywords" content="HTTPS migration, HTTP to HTTPS, moving from HTTP to HTTPS">
     <meta name="description" content="Help guides on moving sites from HTTP to HTTPS">
 
+    <!-- favicon etc. generated from /images/owl.svg with realfavicongenerator.net -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="theme-color" content="#fef7e1">
+
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700|Noto+Serif:400,400i,700,700i" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/normalize.css@5.0.0/normalize.css">
     <link rel="stylesheet" href="https://unpkg.com/font-awesome@4.7.0/css/font-awesome.min.css">
@@ -42,7 +50,7 @@
             <div class="sidebar">
 
                 <div class="owl block-spacing">
-                    <img src="http://archive.catawbaschools.net/schools/BallsCreek/Images1/Owls/Yellow%20Owl.png" alt="Owl logo">
+                    <img src="/images/owl.svg" alt="Owl logo" title="The SSowL">
                 </div>
 
                 <div class="about-site block">
