Changed main title to say Guide & hidden the SSowL on print/pdf

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
         </nav>
 
         <header class="header">
-            <h1>Moving to HTTPS</h1>
+            <h1>Moving to HTTPS Guide</h1>
         </header>
 
         <div class="middle">
 
             <div class="sidebar">
 
-                <div class="owl block-spacing">
+                <div class="ssowl block-spacing">
                     <img src="/images/owl.svg" alt="Owl logo" title="The SSowL">
                 </div>
 
