Minor about text change & changed background gradient to work nicer with the page as it gets longer filled with text

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                 </div>
 
                 <div class="about-site block">
-                    <p>A community site to help you migrate to HTTPS with a tried and tested plan for multiple platforms, hosting envirments and control / access levels</p>
+                    <p>Community site to help site owners migrate to HTTPS with a simple yet tried and tested plan. Allowing you to filter the plan based on multiple platforms, hosting envirments and control / access levels.</p>
                     <p>Are you migrating your site from HTTP to HTTPS?
-                        <a href="https://twitter.com/hashtag/movingtohttps">#movingtohttps</a></p>
+                        <a href="https://twitter.com/hashtag/movingtoHTTPS">#movingtoHTTPS</a></p>
                     <p>Looking to contribute? All code is available on <a href="https://github.com/MovingtoHTTPS">GithHub</a>!</p>
                 </div>
 
