Added es6 support to the .eslint file (in use in the service worker file). Also minor change to highlight colour and disclaimer line in guide

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="about-site block">
-                    <p>Community site to help site owners migrate to HTTPS with a simple yet tried and tested plan. Allowing you to filter the plan based on multiple platforms, hosting envirments and control / access levels.</p>
+                    <p>A community site to help site owners migrate to HTTPS with a simple yet tried and tested plan. Allowing you to filter the plan based on multiple platforms, hosting envirments and control / access levels.</p>
                     <p>Are you migrating your site from HTTP to HTTPS?
                         <a href="https://twitter.com/hashtag/movingtoHTTPS">#movingtoHTTPS</a></p>
                     <p>Looking to contribute? All code is available on <a href="https://github.com/MovingtoHTTPS">GithHub</a>!</p>
@@ -220,7 +220,7 @@
                         </li>
                     </ol>
 
-                    <p><small>Disclaimer: this information is provided as a resource to aide migration. Following it's advice in no way leaves the project or it's authors liable.</small></p>
+                    <p><small>Disclaimer: This site is provided under the <a href="https://mit-license.org/">MIT licence</a> and available on <a href="https://github.com/MovingtoHTTPS">GitHub</a>. All content is provided as a resource to aide migration only. Following it in no way leaves the project or it's authors liable.</small></p>
 
                 </main>
 
